<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutMiscellaneous"
    android:background="@drawable/background_miscellaneous"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        ></TextView>

    
    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"


        >
        
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <View
                android:id="@+id/viewColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_1"></View>
            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/imageColor1"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite"></ImageView>

        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <View
                android:id="@+id/viewColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2"></View>
            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/imageColor2"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"

                android:tint="@color/colorWhite"></ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <View
                android:id="@+id/viewColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_3"></View>
            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/imageColor3"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:tint="@color/colorWhite"></ImageView>

        </FrameLayout>



        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <View
                android:id="@+id/viewColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4"></View>
            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/imageColor4"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:tint="@color/colorWhite"></ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <View
                android:id="@+id/viewColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5"/>

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/imageColor5"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:tint="@color/colorWhite" />

        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_color"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp">
        <LinearLayout
            android:id="@+id/layoutAddImage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginRight="@dimen/_10sdp"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
<ImageView
    android:layout_width="@dimen/_22sdp"
    android:layout_height="@dimen/_22sdp"
    android:contentDescription="@string/app_name"
    android:src="@drawable/ic_image"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:layout_marginStart="@dimen/_10sdp"
    android:fontFamily="@font/ubuntu_medium"
    android:includeFontPadding="false"
    android:text="Add Image "
    android:textColor="@color/colorIcons"
    android:textSize="@dimen/_12sdp"
    />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/layoutAddUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_web_link"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="Add Url"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>